# falcon

./: Cargo.toml  README.md
src/: constants.rs  main.rs  ui.rs  utils.rs
src/ui/: app_component.rs  app_state.rs  app_theme.rs  elements.rs  message_bus.rs
src/ui/elements/: select_options.rs  tabs.rs
src/ui/pages/: about.rs  home.rs
src/ui/pages/home/: env_tabs_block.rs  events.rs  http_badge_column.rs  key_and_value_input_row.rs  project_tabs_block.rs  request_and_response_card.rs  request_tabs_block.rs  response_tabs_block.rs  sidebar_envs.rs  sidebar_item.rs  sidebar_projects.rs  sidebar_requests.rs  tob_bar.rs  url_input_bar.rs
src/ui/tokenizer/: json.rs
src/ui/tokenizer/json/: json_line.rs  json_token.rs
src/utils/: app.rs  color.rs  db.rs  falcon_duration.rs  helpers.rs  request.rs
src/utils/db/: env.rs  project.rs
src/utils/request/: http_method.rs  request_url.rs
