[package]
name = "falcon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
cookie = "0.18.1"
directories = "5.0.1"
iced = { version = "0.12.1", features = ["svg", "image", "tokio"] }
reqwest = { version = "0.12.4", features = ["cookies", "json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
tokio = { version = "0.2.0-alpha.6", features = ["full"] }
toml = "0.8.13"
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
